--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -134,8 +134,8 @@
       "cell_type": "code",
       "source": [
         "model = Sequential()\n",
-        "model.add(LSTM(128, activation='tanh', return_sequences=True, input_shape=(1, 2)))\n" #RNN,
-        "model.add(LSTM(64, activation='tanh', return_sequences=True))\n" #RNN,
+        "model.add(LSTM(128, activation='tanh', return_sequences=True, input_shape=(1, 2))) #RNN \n" ,
+        "model.add(LSTM(64, activation='tanh', return_sequences=True)) #RNN \n" ,
         "model.add(Dense(1, activation='linear'))\n",
         "model.compile(optimizer='adam', loss='mean_squared_error')\n",
         "history = model.fit(X_train, y_train, epochs=100, batch_size=256, validation_split=0.1, verbose=2)\n",
